# bulochka

./: .gitignore  .gitmodules  Hello_world.c  README.md  commands.txt  mergesort.py  sort.c  Очень важный документ.docx
Programming_C/: lab_3+.c  lab_4.c  lab_6+.c  lab_6.c  lab_7.c
Programming_C/Lab_10_struct/: add.c  lab_10.c  new_head.h
Programming_C/Lab_12_multi-file_project/: for_main.c  for_main.h  main.c
Programming_C/Lab_13_Make_CMake/: CMakeLists.txt  Makefile
Programming_C/Lab_13_Make_CMake/cmake_task/: CMakeLists.txt
Programming_C/Lab_13_Make_CMake/cmake_task/background/: CMakeLists.txt
Programming_C/Lab_13_Make_CMake/cmake_task/pipes/: CMakeLists.txt
Programming_C/Lab_14_linked_lists/: lab_14.c
Programming_C/Lab_5_arrays/: lab_5.c
Programming_C/Lab_7_string/: lab_7+.c
Programming_C/Lab_8_dynamic_arrays/: lab_8.c
Programming_C/Lab_9_git/: README.md  sort.c
new_submodule/LAB_10/: lab10_a.py  lab10_b.py  lab10_c.py
new_submodule/LAB_11/: lab11_a.py  lab11_b.py  lab11_c.py  lab11_d.py  lab11_e.py
new_submodule/LAB_12/: lab12_a.py  lab12_b.py  lab12_c.py  lab12_d.py
new_submodule/LAB_13/: lab13_a.py  lab13_b.py  lab13_c.py  lab13_d.py
new_submodule/LAB_3/: lab3_1.py  lab3_4.py  lab3_5.py  lab3_6.py  lab3_7.py  lab3_8.py
new_submodule/LAB_4/: lab4_a.py  lab4_b.py  lab4_c.py  lab4_d.py  lab4_e.py  lab4_f.py  lab4_g.py  lab4_h.py  lab4_j.py
new_submodule/LAB_5/: lab5_a.py  lab5_b.py  lab5_c.py  lab5_d.py  lab5_e.py  lab5_f.py  lab5_g.py
new_submodule/LAB_6/: lab6_a.py  lab6_b.py  lab6_c.py  lab6_d.py  lab6_e.py  lab6_f.py  lab6_g.py  (+1 more)
(+21 files in other folders)
